# prog

./: gamma1.tex
semester1/lab8_/: 1.py  catchBall.py  catchBall1.py  hare.py
semester1/lab9_/: gun.py
semester2/kr/: 1.cpp  2  2.cpp  3  3.cpp  6  6.cpp  7  7.cpp  8.cpp
semester2/lab1/: .~lock.time_table.ods#  advanced_poisk  advanced_poisk.cpp  output.txt  poisk  poisk.cpp  sum  sum.cpp  test  test.cpp  time_table.ods
semester2/lab2/: .~lock.table.ods#  comb  comb.cpp  shaker  shaker.cpp  shell  shell.cpp  shell_table.ods  table.ods
semester2/lesson1/: prime
semester2/week0/: Hello  Hello.cpp  nod  nod.cpp  prime.cpp
semester2/week1/: A  A.cpp  B  B.cpp  C  C.cpp  D  D.cpp  E  E.cpp  E2  E2.cpp  F  F.cpp  G  G.cpp
semester2/week10/: A.cpp  D.cpp  E  E.cpp
semester2/week2/: A  A.cpp  B  B.cpp  C  C.cpp  D  D.cpp  E  E.cpp  F  F.cpp  G  G.cpp  H  H.cpp
semester2/week3/: A  A.cpp  B  B.cpp  C  C.cpp  comparing  comparing.cpp  table.ods
semester2/week5/: A  A.cpp  B  B.cpp  C  C.cpp  D  D.cpp  E  E.cpp  F  F.cpp
semester2/week6/: B.cpp  C.cpp  C1.cpp  D.cpp  E.cpp  F  F.cpp
semester2/week7/: A.cpp  C.cpp  D.cpp  E.cpp  G.cpp
semester2/week8/: A.cpp  (+4 more)
semester3/BallAdventure/: BallAdventure  CMakeCache.txt  CMakeLists.txt  Makefile  ball1.cpp  cmake_install.cmake  main.cpp  run.sh  snake.cpp
semester4/: ML_10.ipynb  keras_1.ipynb  lesson_1.ipynb  lesson_10-2.ipynb  lesson_11-2.ipynb  lesson_12.ipynb  lesson_2.ipynb  lesson_3.ipynb  lesson_4.ipynb  lesson_5-2.ipynb  lesson_6.ipynb  lesson_7.ipynb  lesson_8.ipynb  lesson_9 (1).ipynb  lsa.ipynb
(+85 files in other folders)
